# transformers.cpp

./: CMakeLists.txt  LICENSE  README.md
examples/: 001_manual_graph.cpp
src/: compile_graph.cpp  compute_graph.cpp  constant_folding.cpp  graph.cpp  kernel_registry.cpp  layer.cpp  memory_planner.cpp  tensor.cpp  topological_sorter.cpp
src/include/: compute_graph.hpp  graph.hpp  graph_compiler.hpp  kernel.hpp  layer.hpp  model.hpp  session.hpp  tensor.hpp  tensor_view.hpp  transformers.hpp
src/include/transformers/: layer.hpp  model.hpp  tensor.hpp  transformers.hpp
tests/: CMakeLists.txt  test_compile_graph.cpp  test_dense_layer.cpp  test_graph_compilation.cpp  test_matmul.cpp  test_matsum.cpp  test_node_and_edges.cpp  test_tensor_display.cpp  test_tensor_get_element.cpp  test_tensor_randint_from_shape.cpp  test_tensor_shape.cpp
